--- a/Presentation/Pages/Admin/Customer.cshtml
+++ b/Presentation/Pages/Admin/Customer.cshtml
@@ -57,7 +57,14 @@
                 
                 <td> 
                   <button  id="@item.Id" data-toggle="modal" data-target="#DetailCustomerForm"  type="button" class="btn btn-info btn-sm  btn-rounded DetailCustomer"><i class="fa fa-vcard-o"></i></button>
-                  <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerForm"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
+                  @{
+                    if (item.Status==Model.Status){
+                      <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerFormLock"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
+                    }
+                    else {
+                      <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerFormUnlock"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
+                    }
+                  }
                   <button  id="@item.Id" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteCustomer"><i class="fa fa-times" ></i></button>
                 </td>
               </tr>
@@ -98,7 +105,7 @@
 <!-- end main body -->
 
 <!-- edit form -->
-<div class="modal fade" id="EditCustomerForm" role="dialog">
+<div class="modal fade" id="EditCustomerFormLock" role="dialog">
     <div class="modal-dialog modal-dialog-centered modal-sm">
         <div class="modal-content" >
             <div class="modal-header" style=" background-color:aliceblue;">
@@ -106,10 +113,30 @@
             </div>
 		    <div class="model-body" style="margin: 15px">
 				  <form class="form-sample" action="post">
-            <input type="text" id="EditCustomer-id" hidden/>
+            <input type="text" id="EditCustomerLock-id" hidden/>
             <h3> Are you sure to lock this person</h3>
             <div class="row" style=" display: flex; justify-content: flex-end;">
-              <button id="btsubmitEditCustomer" type="submit" class="btn btn-success mr-2"><b>Update</b></button>
+              <button id="btsubmitEditCustomerLock" type="submit" class="btn btn-success mr-2"><b>Update</b></button>
+              <button class="btn btn-light" data-dismiss="modal"><b>Cancel</b></button>
+            </div>
+          </form>
+		    </div>
+      </div>    
+    </div>
+</div>
+
+<div class="modal fade" id="EditCustomerFormUnlock" role="dialog">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
+        <div class="modal-content" >
+            <div class="modal-header" style=" background-color:aliceblue;">
+                <h4 class="modal-title" style="color:#000; font-weight: bold;font-size:34">Edit customer</h4>
+            </div>
+		    <div class="model-body" style="margin: 15px">
+				  <form class="form-sample" action="post">
+            <input type="text" id="EditCustomerUnlock-id" hidden/>
+            <h3> Are you sure to unlock this person</h3>
+            <div class="row" style=" display: flex; justify-content: flex-end;">
+              <button id="btsubmitEditCustomerUnlock" type="submit" class="btn btn-success mr-2"><b>Update</b></button>
               <button class="btn btn-light" data-dismiss="modal"><b>Cancel</b></button>
             </div>
           </form>
