--- a/Presentation/Pages/Shared/_LayoutAdmin.cshtml
+++ b/Presentation/Pages/Shared/_LayoutAdmin.cshtml
@@ -174,9 +174,9 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" asp-page="/Admin/Employer">
+              <a class="nav-link" asp-page="/Admin/Employee">
                 <i class="menu-icon typcn typcn-shopping-bag"></i>
-                <span class="menu-title">Employer</span>
+                <span class="menu-title">Employee</span>
               </a>
             </li>
             <li class="nav-item">
