--- a/Presentation/Pages/Shared/_LayoutAdmin.cshtml
+++ b/Presentation/Pages/Shared/_LayoutAdmin.cshtml
@@ -233,6 +233,7 @@
     <script src="../assets/js/demo_1/Plane.js"></script>
     <script src="../assets/js/demo_1/Airport.js"></script>
     <script src="../assets/js/demo_1/Customer.js"></script>
+    <script src="../assets/js/demo_1/Employee.js"></script>
     <script src="../assets/js/shared/jquery-ui.js"></script>
     
 
