--- a/Presentation/Pages/Payment.cshtml
+++ b/Presentation/Pages/Payment.cshtml
@@ -3,7 +3,13 @@
 @{
     ViewData["title"]="Payment";
 }
-
+@using Microsoft.AspNetCore.Http;
+@using Presentation.Helpers;
+@if(SessionHelper.GetObjectFromJson<Dictionary<string,object>>(HttpContext.Session,"FlightSearch") == null)
+    {
+        Response.Redirect("Index");    
+    }
+    else{
     <div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');">
         <div class="overlay"></div>
         <div class="container">
@@ -70,7 +76,58 @@
                 </div>
             </div>
         </div>
-        <div class="array-customer"></div>
+        @for(int i=0;i < Model.Adults; i++)
+        {
+            <!-- Adults -->
+            <div class="row">
+                <div class="col-md-2" style="text-align:center">
+                    <p style="margin-top:15px">Adult 1:</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <select class="form-control">
+                            <option value="mr" selected>Mr</option>
+                            <option value="ms">Ms</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Example: John Smith" />
+                    </div>
+                </div>
+            </div>
+        }
+        <!-- end of adult -->
+        @for(int i=0;i < Model.Childs; i++)
+        {    
+            
+            <!-- child -->
+            <div class="row">
+                <div class="col-md-2" style="text-align:center">
+                    <p style="margin-top:15px">Children 1:</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <select class="form-control">
+                            <option value="mr" selected>Male</option>
+                            <option value="ms">Female</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label style="float:right">Birth Date:</label>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Example: John Smith" />
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control birth_date" />
+                    </div>
+                </div>
+            </div>
+        }
         <div class="row">
             <div class="col-md-4">
                 <div class="payment-headding">
@@ -78,9 +135,12 @@
                 </div>
             </div>
         </div>
+        
         <div class="row">
             <div class="col-md-12">
                 <input type="radio">
             </div>
         </div>
     </div>
+    }
+    
