--- a/Presentation/Pages/Shared/_Layout.cshtml
+++ b/Presentation/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-@using Microsoft.AspNetCore.Http
 @Html.AntiForgeryToken()
 <html lang="en">
 <head>
@@ -19,7 +18,7 @@
     <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="~/css/jquery.timepicker.css">
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="~/css/jquery-ui.css">
     <link rel="stylesheet" href="~/css/flaticon.css">
     <link rel="stylesheet" href="~/css/icomoon.css">
     <link rel="stylesheet" href="~/css/style.css">
@@ -42,26 +41,28 @@
                         <li class="nav-item"><a asp-protocol="https" asp-host="agoda.com/" class="nav-link">Hotels</a></li>
                         <li class="nav-item"><a asp-page="/blog" class="nav-link">Blog</a></li>
                         <li class="nav-item"><a asp-page="/contact" class="nav-link">Contact</a></li>   
-                        <li class="nav-item">
-                            @if(Context.Session.GetString("username") != null)
-                                {
-                                    <a id="user" style="cursor:pointer" class="nav-link">
-                                        <span class="ion-ios-person"></span>
+                        <li class="nav-item" id="userField">
+                                    <a id='opener' style='cursor:pointer' class='nav-link'>
+                                        <span class='ion-ios-person'></span>
+                                        Log in
                                     </a>
-                                }
-                                else
-                                {
-                                        <a id="opener" style="cursor:pointer" class="nav-link">
-                                            <span class="ion-ios-person"></span>
-                                            Log in
+                                    <div class='dropdown user nav-link hidden'>
+                                        <a id='account-dropdown' class=' dropdown-toggle ' style='cursor:pointer' type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' >
+                                            <span class='ion-ios-person' ></span>
+                                            <span id='userId'></span>
                                         </a>
-                                }
+                                        <div class='dropdown-menu' aria-labelledby='account-dropdown'>
+                                            
+                                            <button id="profile" class='dropdown-item' asp-page='/account' type='button'>Your Profile</button>
+                                            <button id='logOut' class='dropdown-item'  type='button'>Logout</button>
+                                        </div>
+                                    </div>
                             
                         </li>
                     </ul>
                 </div>
             </div>
-	    </nav>
+        </nav>
     </header>
             @RenderBody()
 
@@ -237,6 +238,82 @@
                 }
             });
         });
+    </script>
+    <script>
+    (function ($) {
+        loadUser();
+        function loadUser()
+        {
+            $.ajax({
+                type:"GET",
+                url: "/Account?handler=UserField",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function(response)
+                {
+                    if($.trim(response.check) == "not")
+                    {
+                        $("#opener").addClass("hidden");
+                        $(".user").removeClass("hidden");
+                        $("#userId").text(response.userid);
+                    }
+                    else
+                    {
+                        $("#opener").removeClass("hidden");
+                        $(".user").addClass("hidden");
+                    }
+                }
+            })
+        }
+        $("#logIn").on("click", function () {
+		event.preventDefault();
+		var username = $("#username").val();
+		var password = $("#password").val();
+		$.ajax({
+			type: "POST",
+			url: "/Account?handler=LogIn",
+			headers: {
+				"XSRF-TOKEN": $('input:hidden[name="__RequestVerificationToken"]').val()
+			},
+			contentType: "application/json; charset=utf-8",
+			dataType: "json",
+ 			// data: JSON.stringify({UserName : username,PassWord: password}),
+			data: JSON.stringify({
+				Username: username,
+				Password: password
+			}),
+			success: function (response) {
+				if ($.trim(response.msg) == "true") {
+					loadUser();
+                    $("#dialog").dialog("close");
+				} else {
+					alert("Tài khoản hoặc mật khẩu bị sai!");
+				}
+			},
+			failure: function (response) {
+				alert(response);
+			},
+			error: function (xhr) {
+				alert(xhr.status);
+			}
+			});	
+		});
+	$("#logOut").on("click",function(){
+			$.ajax({
+				type: "POST",
+				url: "/Account?handler=LogOut",
+				headers: {
+				"XSRF-TOKEN": $('input:hidden[name="__RequestVerificationToken"]').val()
+				},
+				success:function(response)
+				{
+					loadUser();
+
+					// location.reload();
+				}
+			});
+		});
+    })(jQuery);
     </script>
     @RenderSection("Scripts", required: false)
 </body>
