--- a/Presentation/Pages/Admin/Dashboard.cshtml
+++ b/Presentation/Pages/Admin/Dashboard.cshtml
@@ -4,6 +4,13 @@
   Layout = "_LayoutAdmin";
 	ViewData["Title"] = "Admin Page";
 }
+@using Microsoft.AspNetCore.Http
+@{
+  if(HttpContext.Session.GetString("username") == null)
+  {
+    Response.Redirect("Index");
+  }
+}
 <div class="main-panel">
   <div class="content-wrapper">
     <!-- Page Title Header Starts-->
