--- a/Presentation/Pages/Admin/Index.cshtml
+++ b/Presentation/Pages/Admin/Index.cshtml
@@ -8,7 +8,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login V20</title>
+	<title>Admin Login - GreenAir</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -39,24 +39,24 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-b-160 p-t-50">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="post" asp-page="/Admin/Index">
 					<span class="login100-form-title p-b-43">
 						Account Login
 					</span>
 					
 					<div class="wrap-input100 rs1 validate-input" data-validate = "Username is required">
-						<input class="input100" type="text" name="username">
+						<input asp-for="@Model.Username" class="input100" id="username" type="text" name="Username">
 						<span class="label-input100">Username</span>
 					</div>
 					
 					
 					<div class="wrap-input100 rs2 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass">
+						<input asp-for="@Model.Password" class="input100" id="password" type="password" name="Password">
 						<span class="label-input100">Password</span>
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+						<button type="submit" class="login100-form-btn">
 							Sign in
 						</button>
 					</div>
@@ -70,8 +70,9 @@
 			</div>
 		</div>
 	</div>
-	
-	
+	@Model.Msg
+	@Model.Username
+	@Model.Password
 
 	
 	
@@ -91,6 +92,11 @@
 	<script src="~/admin/vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
 	<script src="~/admin/js/main.js"></script>
+	<script>
+		(function ($) {
+
+		});
+	</script>
 
 </body>
 </html>
