--- a/Presentation/Pages/Admin/Customer.cshtml
+++ b/Presentation/Pages/Admin/Customer.cshtml
@@ -4,6 +4,14 @@
   Layout = "_LayoutAdmin";
 	ViewData["Title"] = "Admin Page";
 }
+@using Microsoft.AspNetCore.Http
+@{
+  if(HttpContext.Session.GetString("username") == null)
+  {
+    Response.Redirect("Index");
+  }
+  string job = HttpContext.Session.GetString("job");
+}
 <div class="main-panel">
   <div class="content-wrapper">
      <!-- row search -->
@@ -58,14 +66,18 @@
                 <td> 
                   <button  id="@item.Id" data-toggle="modal" data-target="#DetailCustomerForm"  type="button" class="btn btn-info btn-sm  btn-rounded DetailCustomer"><i class="fa fa-vcard-o"></i></button>
                   @{
-                    if (item.Status==Model.Status){
-                      <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerFormLock"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
-                    }
-                    else {
-                      <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerFormUnlock"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
+                    if(job == "001")
+                    {
+                      if (item.Status==Model.Status ){
+                        <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerFormLock"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
+                      }
+                      else {
+                        <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerFormUnlock"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
+                      }
+                      <button  id="@item.Id" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteCustomer"><i class="fa fa-times" ></i></button>
                     }
                   }
-                  <button  id="@item.Id" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteCustomer"><i class="fa fa-times" ></i></button>
+                  
                 </td>
               </tr>
             }
