--- a/Presentation/Pages/Shared/_Layout.cshtml
+++ b/Presentation/Pages/Shared/_Layout.cshtml
@@ -155,23 +155,44 @@
 </div>
 <!-- register -->
 <div id="register" title="Register">
+    <div class="row">
+        <div class="heading  col-md-8">
+            <h3>Your information</h3>
+        </div>
+    </div>
     <form>
-        <fieldset>
-            <label for="name">Name</label>
-            <input type="text">
-            <label for="email">Email</label>
-            <input type="text" >
-            <label for="password">Password</label>
-            <input type="password">
-            <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-        </fieldset>
+        <div class="row">
+            <div class="col-md-4">
+                <label>First Name</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>Last Name</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>Birth Date</label>
+                <div class="form-group">
+                    <input type="text" class="form-control birth_date" />
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
     </form>
+    
 </div>
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/jquery-ui.js"></script>
     <script src="~/js/jquery.easing.1.3.js"></script>
     <script src="~/js/jquery.waypoints.min.js"></script>
+    
     <script src="~/js/jquery.stellar.min.js"></script>
     <script src="~/js/owl.carousel.min.js"></script>
     <script src="~/js/jquery.magnific-popup.min.js"></script>
@@ -308,8 +329,7 @@
 				success:function(response)
 				{
 					loadUser();
-
-					// location.reload();
+					location.reload();
 				}
 			});
 		});
